# HomeApp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: c-cpp.yml
cmake/: add_lib.cmake  add_ut.cmake
src/: CMakeLists.txt  main.cpp
src/api/: Signal.hpp
src/api/mqtt/: CMakeLists.txt  Mqtt.cpp  Mqtt.hpp  MqttMessageDispatcher.cpp  MqttMessageDispatcher.hpp  mqtt.cpp  mqtt.hpp
src/core/: CMakeLists.txt  DeviceController.cpp  DeviceController.hpp  DeviceType.hpp  MqttEntity.cpp  MqttEntity.hpp  MsgId.hpp  RegisteredDevice.cpp  RegisteredDevice.hpp  Registration.cpp  Registration.hpp  RelaySwitch.cpp  RelaySwitch.hpp  Stateful.hpp  TemperatureController.cpp  TemperatureController.hpp  Termometer.cpp  Termometer.hpp
test/: CMakeLists.txt
test/api/: CMakeLists.txt  SignalTest.cpp
test/api/mqtt/: CMakeLists.txt  MqttMessageDispatcherMock.hpp  MqttMessageDispatcherTest.cpp  MqttMock.hpp
test/core/: CMakeLists.txt  DeviceControllerTest.cpp  MqttEntityTest.cpp  RegisteredDeviceTest.cpp  RegistrationMock.hpp  RegistrationTest.cpp  RelaySwitchTest.cpp  StatefulTest.cpp  TemperatureControllerTest.cpp  TermometerTest.cpp
